--- a/content/about.mdx
+++ b/content/about.mdx
@@ -10,7 +10,7 @@ Hello! My name is [Kei](https://keikhcheung.com). 👋🏼
 
 Staying at home these days have brought me more time to organise [my messy habits of information consumption](https://keikhcheung.com/blog/2020/05/23/On-Digital-Reference-Keeping/). Looking at the flying notes and files from all across has led me to the attempt at a better workflow and structure for thoughts.
 
-Here are some of my ongoing, working notes from topics I find interesting. They are raw and unpolished – because I am still cooking! But maybe they could also be intriguing to you, too, if you're curious!
+Here are some of my ongoing, working notes on topics I find interesting. They are raw and unpolished—because I am still cooking! But maybe they could also be intriguing to you, too, if you're curious!
 
 If any of these notes or thoughts could be useful, I'd be happy to know! Feel free to ping me on [Twitter](https://twitter.com/keikhcheung).
 
