Publish knowledge sharing notes
Also add last update dates.

--- a/content/about.mdx
+++ b/content/about.mdx
@@ -12,11 +12,12 @@ Staying at home these days have brought me more time to organise [my messy habit
 
 Here are some of my ongoing, working notes on topics I find interesting. They are raw and unpolished—because I am still cooking! But maybe they could also be intriguing to you, too, if you're curious!
 
-If any of these notes or thoughts could be useful, I'd be happy to know! Feel free to ping me on [Twitter](https://twitter.com/keikhcheung).
+If any of these notes or thoughts could be useful, I'd be happy to know! Feel free to ping me on [Twitter](https://twitter.com/keikhcheung). Also if you have any questions or want to simply talk about ideas.
 
 There are no catalogues or directories but links. Here is some help to start with:
 
 - [[Trust is the basic unit of human connection]]
+- [[Learning in public]]
 
 Have fun digging around!
 
