Add reading UI and heuristics

--- a/content/about.mdx
+++ b/content/about.mdx
@@ -10,17 +10,18 @@ Hello! My name is [Kei](https://keikhcheung.com). 👋🏼
 
 Staying at home these days have brought me more time to organise [my messy habits of information consumption](https://keikhcheung.com/blog/2020/05/23/On-Digital-Reference-Keeping/). Looking at the flying notes and files from all across has led me to the attempt at a better workflow and structure for thoughts.
 
-Here are some of my ongoing, working notes on topics I find interesting. They are raw and unpolished—because I am still cooking! But maybe they could also be intriguing to you, too, if you're curious!
+Here are some of my ongoing, working notes on topics I find interesting. They are raw and unpolished—because I am still cooking! But maybe they could also be intriguing to you, too, if you’re curious!
 
-If any of these notes or thoughts could be useful, I'd be happy to know! Feel free to ping me on [Twitter](https://twitter.com/keikhcheung). Also if you have any questions or want to simply talk about ideas.
+If any of these notes or thoughts could be useful, I’d be happy to know! Feel free to ping me on [Twitter](https://twitter.com/keikhcheung). Also if you have any questions or want to simply talk about ideas.
 
 There are no catalogues or directories but links. Here is some help to start with:
 
 - [[Trust is the basic unit of human connection]]
 - [[Learning in public]]
+- [[Continuous scroll is hard for retaining information]]
 
 Have fun digging around!
 
 * * *
 
-This idea is sparked by the [Roam community](https://roamresearch.com/) and [Andy Matuschak](https://notes.andymatuschak.org/). The site runs on Mathieu Dutour's [`gatsby-theme-garden`](https://www.npmjs.com/package/gatsby-theme-garden) with some customisation.
+This idea is sparked by the [Roam community](https://roamresearch.com/) and [Andy Matuschak](https://notes.andymatuschak.org/). The site runs on Mathieu Dutour’s [`gatsby-theme-garden`](https://www.npmjs.com/package/gatsby-theme-garden) with some customisation.
