Replace new content
After recovery from Time Machine backup for stacked pages. Add & publish Design research, intuition, and familarity.

--- a/content/about.mdx
+++ b/content/about.mdx
@@ -19,6 +19,7 @@ There are no catalogues or directories but links. Here is some help to start wit
 - [[Trust is the basic unit of human connection]]
 - [[Learning in public]]
 - [[Continuous scroll is hard for retaining information]]
+- [[Design research tips]]
 
 Have fun digging around!
 
