Add Social media shape public opinion
From book LikeWar

--- a/content/about.mdx
+++ b/content/about.mdx
@@ -20,6 +20,7 @@ There are no catalogues or directories but links. Here is some help to start wit
 - [[Learning in public]]
 - [[Continuous scroll is hard for retaining information]]
 - [[Design research tips]]
+- [[Social media shape public opinion]]
 
 Have fun digging around!
 
