--- a/content/about.mdx
+++ b/content/about.mdx
@@ -21,6 +21,7 @@ There are no catalogues or directories but links. Here is some help to start wit
 - [[Continuous scroll is hard for retaining information]]
 - [[Design research tips]]
 - [[Social media shape public opinion]]
+- [[Heuristics for interaction design]]
 
 Have fun digging around!
 
