Update wiki links; 404

--- a/notes/404.md
+++ b/notes/404.md
@@ -1,4 +1,6 @@
-Opps! This note is still not ready to be live. 😬
+# Oops!
+
+This note is not yet ready to go live. 😬
 
 Come back later or ping me on [Twitter](https://twitter.com/keikhcheung) for a boost ! 🚀🌝
 
