New note from HTTSN. Wiki links, tags.

--- a/notes/404.md
+++ b/notes/404.md
@@ -4,8 +4,8 @@ permalink: /404.html
 
 # Oops!
 
-This note is not yet ready to go live. 😬
+You found a note that is not yet ready to go live. 😬
 
 Come back later or ping me on [Twitter](https://twitter.com/keikhcheung) for a boost ! 🚀🌝
 
-If you are also interested in this topic, we could briefly chat about it and maybe you'd also get an early preview. 👀
+If you are also interested in this topic, we could briefly chat about it and maybe I can show you an early preview. 👀
